[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Ethan Frey <ethanfrey@noreply.github.com"]
categories = ["wasm"]
description = "serde-json for wasm programs"
documentation = "https://docs.rs/serde-json-wasm"
edition = "2018"
keywords = ["serde", "json", "wasm"]
license = "MIT OR Apache-2.0"
name = "serde-json-wasm"
readme = "README.md"
repository = "https://github.com/confio/serde-json-wasm"
version = "0.1.0"

[dependencies]
ryu = "1.0.5"

[dependencies.serde]
default-features = false
features = ["alloc", "derive"]
version = "1.0.100"

[dev-dependencies]
serde_derive = "1.0.100"

[features]
custom-error-messages = []
