[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Ethan Frey <ethanfrey@noreply.github.com>",
    "Simon Warta <webmaster128@noreply.github.com>",
    "Mauro Lacy <maurolacy@noreply.github.com>",
    "Bartłomiej Kuras <hashedone@noreply.github.com>",
]
categories = ["wasm"]
description = "serde_json for Wasm programs (small, deterministic, no floats)"
documentation = "https://docs.rs/serde-json-wasm"
edition = "2021"
keywords = ["serde", "json", "wasm"]
license = "MIT OR Apache-2.0"
name = "serde-json-wasm"
readme = "README.md"
repository = "https://github.com/CosmWasm/serde-json-wasm"
version = "0.5.1"
exclude = [
    ".cargo/",
    ".github/",
    ".gitignore",
]

[dependencies]
ryu = "1.0.5"

[dependencies.serde]
default-features = false
features = ["alloc"]
version = "1.0.100"

[dev-dependencies]
serde = { version = "1.0.100", default-features = false, features = ["derive"] }
serde_json = "1.0.120"

[features]
default = ["std"]
std = ["serde/std"]
unstable = ["serde/unstable"]
